--- a/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
+++ b/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
@@ -1,12 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageId>Dbarone.Net.Mapper</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>David Barone</Authors>
+    <Company>Dbarone.com</Company>
+    <Description>A .NET object mapper.</Description>
+    <RepositoryUrl>https://github.com/davidbarone/Dbarone.Net.Mapper</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/davidbarone/Dbarone.Net.Mapper</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>    
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\Documentation.md" Pack="true" PackagePath="\"/>  
     <PackageReference Include="Dbarone.Net.Extensions.Reflection" Version="1.0.4" />
   </ItemGroup>
 
