--- a/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
+++ b/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\Documentation.md" Pack="true" PackagePath="\" />
+    <PackageReference Include="Dbarone.Net.Document" Version="1.0.2" />
     <PackageReference Include="Dbarone.Net.Extensions" Version="1.0.10" />
   </ItemGroup>
 
