--- a/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
+++ b/Dbarone.Net.Mapper/Dbarone.Net.Mapper.csproj
@@ -13,7 +13,8 @@
     <Description>A .NET object mapper.</Description>
     <RepositoryUrl>https://github.com/davidbarone/Dbarone.Net.Mapper</RepositoryUrl>
     <PackageProjectUrl>https://github.com/davidbarone/Dbarone.Net.Mapper</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>    
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>        
   </PropertyGroup>
 
   <ItemGroup>
